bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:2: error: Int.type does not take parameters
  if (10<=Int(a)<=20) {
             ^In1020:5: error: Int.type does not take parameters
  if (10<=Int(b)<=20) {
             ^