bat.bool1.in1020.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
  if (10<=Int(a)<=20) {
    return true
  }
  if (10<=Int(b)<=20) {
    return true
  }
  else {
    return false
  }
}